Tue Sep 27 17:35:28 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* iseq.c (iseqw_s_compile_file): deal with syntax error as well as
	  compile, and should not abort when rescued.

Tue Sep 27 12:07:17 2016  NARUSE, Yui  <naruse@ruby-lang.org>

	* lib/cgi/cookie.rb (parse): don't allow , as a separator. [Bug #12791]

	* lib/webrick/cookie.rb (parse): ditto.

Mon Sep 26 21:37:21 2016  Akinori MUSHA  <knu@iDaemons.org>

	* man/erb.1, man/irb.1, man/ri.1, man/ruby.1: Remove Ns before
	  punctuation.

Mon Sep 26 16:23:49 2016  Kazuki Yamaguchi  <k@rhe.jp>

	* ext/stringio/stringio.c (strio_seek): Avoid signed integer overflow.
	  It's not harmful in practice here, but is still undefined behavior.

	* ext/stringio/stringio.c (strio_extend): Check that the new length does
	  not exceed LONG_MAX. This fixes the invalid write on the overflow.

	* test/stringio/test_stringio.rb (test_write_integer_overflow): Add a
	  test case for the above fix in strio_extend().

Mon Sep 26 15:43:34 2016  Kazuki Yamaguchi  <k@rhe.jp>

	* eval_intern.h (TH_PUSH_TAG): Initialize struct rb_vm_tag::tag with
	  Qundef rather than 0 which is equal to Qfalse. Since Kernel#throw(obj)
	  searches a tag with rb_vm_tag::tag == obj, throw(false) can
	  accidentally find an unrelated tag which is not created by
	  Kernel#catch.  [ruby-core:77229] [Bug #12743]

	* test/ruby/test_exception.rb (test_throw_false): Add a test case for
	  this.

Mon Sep 26 14:36:12 2016  Naotoshi Seo  <sonots@gmail.com>

	* lib/tempfile.rb: provide default basename parameter for
	  Tempfile.create. [Feature #11965] Patch by Yuki Kurihara
	* test/test_tempfile.rb: ditto.

Mon Sep 26 14:10:54 2016  Ary Borenszweig  <ary@esperanto.org.ar>

	* string.c (lstrip_offset): add a fast path in the case of single
	  byte optimizable strings, as well as rstrip_offset.
	  [ruby-core:77392] [Feature #12788]

Mon Sep 26 12:00:12 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* gems/bundled_gems: update to minitest-5.9.1.
