@@ -1,3 +1,10 @@
+Tue Sep 27 18:10:18 2016  Jeremy Evans <code@jeremyevans.net>
+
+	* error.c: This makes all warnings raised call Warning.warn, which
+	  by default does the same thing it does currently
+	  (rb_write_error_str).  You can override Warning.warn to change
+	  the behavior. [ruby-core:75016] [Feature #12299]
+
 Tue Sep 27 17:35:28 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* iseq.c (iseqw_s_compile_file): deal with syntax error as well as
